gitops/apps/jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
