gitops/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/description: Media streaming
    gethomepage.dev/pod-selector: "app=jellyfin"
    gethomepage.dev/href: "http://jellyfin.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.omerlevy03.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
    - host: jellyfin.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
